--- a/_posts/tumblr/thinking-laterally/2012-10-05-bulb-vase.md
+++ b/_posts/tumblr/thinking-laterally/2012-10-05-bulb-vase.md
@@ -16,6 +16,8 @@ tags:
 - art
 - bed
 - pink
+tumblr: Thinking Laterally
+tumblr_website_url: "https://thinkinglaterally.tumblr.com"
 tumblr_url: https://thinkinglaterally.tumblr.com/post/32933421009/bulb-vase-blown-a-lightbulb-repurposed-as-a
 ---
  ![](/content/images/tumblr/thinking-laterally/tumblr_mbf4qtHgVF1qh9he3o3_1280.jpg)  
