--- a/_posts/tumblr/thinking-laterally/2013-02-04-2012-in-30-seconds.md
+++ b/_posts/tumblr/thinking-laterally/2013-02-04-2012-in-30-seconds.md
@@ -22,6 +22,8 @@ tags:
 - video
 - vimeo
 - selfie a day
+tumblr: Thinking Laterally
+tumblr_website_url: "https://thinkinglaterally.tumblr.com"
 tumblr_url: https://thinkinglaterally.tumblr.com/post/42258280411/2012-in-30-seconds-time-lapse-of-1-selfie-a-day
 ---
 <iframe src="https://player.vimeo.com/video/58858056?title=0&amp;byline=0&amp;portrait=0&amp;app_id=122963" width="400" height="225" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>  
