--- a/_posts/tumblr/thinking-laterally/2011-02-16-watch.md
+++ b/_posts/tumblr/thinking-laterally/2011-02-16-watch.md
@@ -13,6 +13,8 @@ tags:
 - boring
 - lesson
 - white
+tumblr: Thinking Laterally
+tumblr_website_url: "https://thinkinglaterally.tumblr.com"
 tumblr_url: https://thinkinglaterally.tumblr.com/post/3325413150/watch-what-even-is-an-art-lesson
 ---
  ![](/content/images/tumblr/thinking-laterally/tumblr_lgpjetDmyu1qh9he3o1_1280.jpg)  
