--- a/_posts/tumblr/thinking-laterally/2012-07-19-y-fx-life.md
+++ b/_posts/tumblr/thinking-laterally/2012-07-19-y-fx-life.md
@@ -33,6 +33,8 @@ tags:
 - thinking
 - laterally
 - jden
+tumblr: Thinking Laterally
+tumblr_website_url: "https://thinkinglaterally.tumblr.com"
 tumblr_url: https://thinkinglaterally.tumblr.com/post/27546412241/y-fx-life-check-your-view-window
 ---
  ![](/content/images/tumblr/thinking-laterally/tumblr_m7ei8l3UwP1qh9he3o1_1280.jpg)  
