--- a/_posts/tumblr/thinking-laterally/2013-05-03-shit-bro.md
+++ b/_posts/tumblr/thinking-laterally/2013-05-03-shit-bro.md
@@ -28,6 +28,8 @@ tags:
 - thinking
 - laterally
 - thinking laterally
+tumblr: Thinking Laterally
+tumblr_website_url: "https://thinkinglaterally.tumblr.com"
 tumblr_url: https://thinkinglaterally.tumblr.com/post/49501838286/shit-bro-photo-heidi-quiniones-on-canon-650d
 ---
  ![](/content/images/tumblr/thinking-laterally/tumblr_mm7tdw3xz51qh9he3o1_1280.jpg)  
