--- a/_posts/tumblr/thinking-laterally/2011-02-19-whos-cool.md
+++ b/_posts/tumblr/thinking-laterally/2011-02-19-whos-cool.md
@@ -15,7 +15,7 @@ tags:
 - whos cool
 - self portrait
 tumblr: Thinking Laterally
-tumblr_website_url: "https://thinkinglaterally.tumblr.com"
+tumblr_website_url: https://thinkinglaterally.tumblr.com
 tumblr_url: https://thinkinglaterally.tumblr.com/post/3377804116/whos-cool-very-early-photoshop-job-for-fun
 ---
  ![](/content/images/tumblr/thinking-laterally/tumblr_lgus2rNyKo1qh9he3o1_1280.jpg)  
