--- a/_posts/tumblr/thinking-laterally/2011-02-16-chased.md
+++ b/_posts/tumblr/thinking-laterally/2011-02-16-chased.md
@@ -13,7 +13,7 @@ tags:
 - desktop
 - wallpaper
 tumblr: Thinking Laterally
-tumblr_website_url: "https://thinkinglaterally.tumblr.com"
+tumblr_website_url: https://thinkinglaterally.tumblr.com
 tumblr_url: https://thinkinglaterally.tumblr.com/post/3324775669/chased-a-simple-desktop-that-features-the-old
 ---
  ![](/content/images/tumblr/thinking-laterally/tumblr_lgpf36Lv0V1qh9he3o1_1280.png)  
