--- a/_posts/tumblr/thinking-laterally/2011-02-16-chased.md
+++ b/_posts/tumblr/thinking-laterally/2011-02-16-chased.md
@@ -4,7 +4,7 @@ categories: tumblr thinking-laterally
 title: CHaSeD
 date: '2011-02-16T20:15:00+10:30'
 tags:
-- simple desktops
+- simple-desktops
 - photoshop
 - blue
 - suits
