--- a/_posts/tumblr/thinking-laterally/2011-02-16-watch.md
+++ b/_posts/tumblr/thinking-laterally/2011-02-16-watch.md
@@ -5,8 +5,8 @@ title: Watch
 date: '2011-02-16T21:48:00+10:30'
 tags:
 - watch
-- body art
-- body paint
+- body-art
+- body-paint
 - paint
 - art
 - school
