--- a/_posts/tumblr/thinking-laterally/2012-07-19-y-fx-life.md
+++ b/_posts/tumblr/thinking-laterally/2012-07-19-y-fx-life.md
@@ -7,12 +7,12 @@ tags:
 - maths
 - mathematics
 - graph
-- graph porn
+- graph-porn
 - f(x)
 - function
 - life
 - parabola
-- graph paper
+- graph-paper
 - calculator
 - casio
 - draw
@@ -20,12 +20,12 @@ tags:
 - y=x^2
 - sine
 - sin
-- sin curve
-- sine curve
+- sin-curve
+- sine-curve
 - y=mx+c
 - love
-- love heart
-- heart equation
+- love-heart
+- heart-equation
 - equation
 - cubic
 - polynomial
