--- a/_posts/tumblr/thinking-laterally/2013-02-04-2012-in-30-seconds.md
+++ b/_posts/tumblr/thinking-laterally/2013-02-04-2012-in-30-seconds.md
@@ -4,24 +4,24 @@ categories: tumblr thinking-laterally
 title: 2012 in 30 seconds
 date: '2013-02-04T16:26:00+10:30'
 tags:
-- '2012'
-- 2012 in 30 seconds
-- time lapse
+- 2012
+- 2012-in-30-seconds
+- time-lapse
 - selfie
-- self portrait
-- photo a day
-- '365'
-- 365 project
-- everyday app
+- self-portrait
+- photo-a-day
+- 365
+- 365-project
+- everyday-app
 - iphone
 - photo
 - photography
 - cool
 - jden
-- jden redden
+- jden-redden
 - video
 - vimeo
-- selfie a day
+- selfie-a-day
 tumblr: Thinking Laterally
 tumblr_website_url: https://thinkinglaterally.tumblr.com
 tumblr_url: https://thinkinglaterally.tumblr.com/post/42258280411/2012-in-30-seconds-time-lapse-of-1-selfie-a-day
