--- a/_posts/tumblr/thinking-laterally/2013-05-03-shit-bro.md
+++ b/_posts/tumblr/thinking-laterally/2013-05-03-shit-bro.md
@@ -4,30 +4,30 @@ categories: tumblr thinking-laterally
 title: Shit Bro
 date: '2013-05-03T18:38:20+09:30'
 tags:
-- shit bro
+- shit-bro
 - apocoalypse
 - fire
 - sky
-- sky on fire
+- sky-on-fire
 - disater
-- disaster movie
-- world ending
-- end of world
+- disaster-movie
+- world-ending
+- end-of-world
 - backpack
 - photo
 - photography
 - adelaide
-- anzac day parade
+- anzac-day-parade
 - explosion
-- thousand suns
-- canon 650d
+- thousand-suns
+- canon-650d
 - exploding
 - jden
-- jden redden
-- heidi quiniones
+- jden-redden
+- heidi-quiniones
 - thinking
 - laterally
-- thinking laterally
+- thinking-laterally
 tumblr: Thinking Laterally
 tumblr_website_url: https://thinkinglaterally.tumblr.com
 tumblr_url: https://thinkinglaterally.tumblr.com/post/49501838286/shit-bro-photo-heidi-quiniones-on-canon-650d
