--- a/_posts/tumblr/thinking-laterally/2011-02-19-whos-cool.md
+++ b/_posts/tumblr/thinking-laterally/2011-02-19-whos-cool.md
@@ -7,13 +7,13 @@ tags:
 - 3g
 - face
 - iphone
-- justin kredible
+- justin-kredible
 - photoshop
 - screen
-- see through
+- see-through
 - two
-- whos cool
-- self portrait
+- whos-cool
+- self-portrait
 tumblr: Thinking Laterally
 tumblr_website_url: https://thinkinglaterally.tumblr.com
 tumblr_url: https://thinkinglaterally.tumblr.com/post/3377804116/whos-cool-very-early-photoshop-job-for-fun
